# Prog

./: Лабораторная работа №1 (Rust).md  Лабораторная работа №2 (Rust).md  Лабораторная работа №2.md  Лабораторная работа №3.md  Лабораторная работа №4.md  Лабораторная работа №5.md  Самостоятельная работа №1.md
Лабораторная работа №5/DVD_Project/: Makefile  graphics.c  graphics.h  main.c  meson.build
Лабораторная работа №5/DVD_Project/cmake_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
